[tool.poetry]
name = "fastapitutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
